--- a/pedidos/templates/borrador.html
+++ b/pedidos/templates/borrador.html
@@ -1,11 +1,13 @@
 <!doctype html>
-<html lang="es">
+<html>
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Informacion de usuario</title>
+
   <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <style>
     body {
@@ -13,10 +15,6 @@
       margin: 20px;
       padding: 0;
       background-color: #f9f9f9;
-    }
-
-    h1 {
-      color: #333;
     }
 
     table {
@@ -54,24 +52,28 @@
       box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
     }
 
-    .sidebar h2 {
-      margin-top: 0;
-    }
-
     .sidebar a {
       color: #f8f9fa;
       text-decoration: none;
+      display: flex;
+      align-items: center;
+      padding: 10px 0;
+    }
+
+    .sidebar a i {
+      margin-right: 10px;
+    }
+
+    .sidebar h2 {
+      margin-top: 0;
     }
 
     .sidebar a:hover {
       text-decoration: underline;
     }
 
-    /* Estilos para el contenido principal */
-    main {
-      margin-left: 270px;
-      /* Deja espacio para la barra lateral */
-      padding: 20px;
+    .info-cliente {
+      margin-left: 220px;
     }
   </style>
 
@@ -81,22 +83,73 @@
 
   <!-- Barra de Navegación Vertical -->
   <div class="sidebar">
-
-    <h2>Cuenta de usuario</h2>
-
+    <h2>{{ cliente.nombre }}</h2>
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link" href="">Cuenta</a>
+        <a class="nav-link" href="{% url 'ver_pedidos_cliente' cliente.id %}">
+          <i class="fas fa-user"></i> Cuenta
+        </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="">Productos</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="">Borrador</a>
+        <a class="nav-link" href="{% url 'ver_productos'%}">
+          <i class="fas fa-box"></i> Productos
+        </a>
       </li>
     </ul>
   </div>
 
+  <!-- Menu  -->
+  <main role="main" class="container mt-5">
+    <div class="info-cliente">
+
+      <!-- Perfil  -->
+      <h1 class="mb-4">Perfil del Cliente: {{ cliente.nombre }}</h1>
+      <div class="card mb-4">
+        <div class="card-header">
+          Información del Cliente
+        </div>
+        <div class="card-body">
+          <p><strong>Cédula:</strong> {{ cliente.cedula }}</p>
+          <p><strong>Email:</strong> {{ cliente.email }}</p>
+          <p><strong>Teléfono:</strong> {{ cliente.telefono }}</p>
+          <p><strong>Dirección:</strong> {{ cliente.direccion }}</p>
+          <p><strong>Ciudad:</strong> {{ cliente.ciudad }}</p>
+        </div>
+      </div>
+
+      <!-- Historial de pedidos  -->
+      <h2 class="mb-4">Historial de Pedidos</h2>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Fecha</th>
+            <th scope="col">Destinatario</th>
+            <th scope="col">Estado</th>
+            <th scope="col">Detalle </th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for pedido in pedidos %}
+          <tr>
+            <th scope="row"><a href="">{{ pedido.id }}</a></th>
+            <td>{{ pedido.fecha }}</td>
+            <td>{{ pedido.destinatario.nombre }}</td>
+            <td>{{ pedido.estado }}</td>
+            <td> Ver detalle </td> <!-- rediccionar a el detalle del pedido  -->
+          </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+    </div>
+  </main>
+
+
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Gn5384xqQ1aoWXA+0584pW6y8wF5VQbQ2NTy6OeBzEYZ7mE8K2xSdjOdNG7a5C" crossorigin="anonymous"></script>
 </body>
 
 </html>
