--- a/pedidos/templates/pedidos.html
+++ b/pedidos/templates/pedidos.html
@@ -72,7 +72,7 @@
       text-decoration: underline;
     }
 
-    .info-cliente{
+    .info-cliente {
       margin-left: 220px;
     }
   </style>
@@ -95,32 +95,12 @@
           <i class="fas fa-box"></i> Productos
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'ver_borrador' %}">
-          <i class="fas fa-file-alt"></i> Borrador
-        </a>
-      </li>
     </ul>
   </div>
 
   <!-- Menu  -->
   <main role="main" class="container mt-5">
     <div class="info-cliente">
-
-      <!-- Perfil  -->
-      <h1 class="mb-4">Perfil del Cliente: {{ cliente.nombre }}</h1>
-      <div class="card mb-4">
-        <div class="card-header">
-          Información del Cliente
-        </div>
-        <div class="card-body">
-          <p><strong>Cédula:</strong> {{ cliente.cedula }}</p>
-          <p><strong>Email:</strong> {{ cliente.email }}</p>
-          <p><strong>Teléfono:</strong> {{ cliente.telefono }}</p>
-          <p><strong>Dirección:</strong> {{ cliente.direccion }}</p>
-          <p><strong>Ciudad:</strong> {{ cliente.ciudad }}</p>
-        </div>
-      </div>
 
       <!-- Historial de pedidos  -->
       <h2 class="mb-4">Historial de Pedidos</h2>
@@ -129,24 +109,26 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Fecha</th>
+            <th scope="col">Destinatario</th>
             <th scope="col">Estado</th>
-            <th scope="col">Monto</th>
+            <th scope="col">Detalle </th>
           </tr>
         </thead>
         <tbody>
           {% for pedido in pedidos %}
           <tr>
             <th scope="row">{{ pedido.id }}</th>
-            <td>{{ pedido.fecha_pedido }}</td>
-            <td>{{ pedido.estado_pedido }}</td>
-            <td>{{ pedido.total }}</td>
+            <td>{{ pedido.fecha }}</td>
+            <td>{{ pedido.destinatario.nombre }}</td>
+            <td>{{ pedido.estado }}</td>
+            <td> Ver detalle </td> <!-- rediccionar a el detalle del pedido  -->
           </tr>
           {% endfor %}
         </tbody>
       </table>
     </div>
-
   </main>
+
 
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
