--- a/pedidos/templates/menu.html
+++ b/pedidos/templates/menu.html
@@ -35,7 +35,7 @@
           <i class="fas fa-user"></i> Cuenta
         </a>
         {% else %}
-        <a class="nav-link" href="{% url 'account_login' %}">
+        <a class="nav-link" href="">
           <i class="fas fa-user"></i> Iniciar sesión
         </a>
         {% endif %}
