--- a/static/css/main.css
+++ b/static/css/main.css
@@ -382,3 +382,117 @@ main ul li {
   outline: none;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
+
+/* Estilo para el contenedor del formulario de inicio de sesión */
+.login-container {
+  max-width: 500px;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.login-container h1 {
+  font-size: 36px;
+  color: #ec9813;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.login-container h2 {
+  font-size: 28px;
+  color: #ec9813;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.form-outline {
+  margin-bottom: 15px;
+}
+
+.form-control {
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+  font-size: 16px;
+}
+
+.form-label {
+  color: #333;
+}
+
+.form-check-input {
+  margin-right: 5px;
+}
+
+a {
+  color: #ec9813;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+.btn-primary {
+  background-color: #ec9813;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+  margin-top: 15px;
+}
+
+.btn-primary:hover {
+  background-color: #871f23;
+  transform: scale(1.05);
+}
+
+.redes_sociales {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.redes_sociales p {
+  margin: 10px 0;
+}
+
+.redes_sociales a {
+  text-decoration: none;
+}
+
+.social-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+}
+
+.social-buttons .btn-link {
+  background-color: transparent;
+  border: 2px solid #ec9813;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  font-size: 20px;
+  color: #ec9813;
+  transition: background-color 0.3s, color 0.3s;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.social-buttons .btn-link:hover {
+  background-color: #871f23;
+  color: #fff;
+  border-color: #871f23;
+}
+
