--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,68 +1,47 @@
 {% extends 'menu.html' %}
 
-{% block title %}Login{% endblock %}
+{% block title %}Inicio de Sesión{% endblock %}
 
 {% block content %}
 
-<main role="main" class="container mt-5">
-  <div class="login-container">
-    <form>
-      <h1>Log In</h1>
-      <!-- Email input -->
-      <div class="form-outline mb-4">
-        <label class="form-label" for="form2Example1">Usuario</label>
-        <input type="usuario" id="form2Example1" class="form-control" />
-      </div>
+<main class="container mt-5">
 
-      <!-- Password input -->
-      <div class="form-outline mb-4">
-        <label class="form-label" for="form2Example2">Contraseña</label>
-        <input type="password" id="form2Example2" class="form-control" />
-      </div>
+    <div>
+        <strong>Menú:</strong>
+        <ul>
+            <li><a href="/accounts/login/">Iniciar sesión</a></li>
+            <li><a href="/accounts/signup/">Registrarse</a></li>
+        </ul>
+    </div>
 
-      <!-- 2 column grid layout for inline styling -->
-      <div class="row mb-4">
-        <div class="col d-flex justify-content-center">
-          <!-- Checkbox -->
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="form2Example31" checked />
-            <label class="form-check-label" for="form2Example31"> Recuerdame </label>
-          </div>
-        </div>
+    <h1>Iniciar sesión</h1>
 
-        <div class="col">
-          <!-- Simple link -->
-          <a style="text-decoration: none;" href="#!">¿Olvidaste tu contraseña?</a>
-        </div>
-      </div>
+    <p>
+        Si aún no ha creado una cuenta, por favor <a href="/accounts/signup/">regístrese</a> primero.
+    </p>
 
-      <!-- Submit button -->
-      <button type="button" class="btn btn-primary btn-block mb-4">Iniciar Sesión</button>
-      <!-- Register buttons -->
-      <div class="redes_sociales text-center">
-        <p>¿No tienes cuenta? <a href="#!">Regístrate</a></p>
-        <p>Síguenos en:</p>
+    <form method="post" action="{% url 'account_login' %}">
+        {% csrf_token %}
+        <p>
+            <label for="id_login">Usuario:</label>
+            <input type="text" name="login" placeholder="Usuario" autocomplete="username" maxlength="150" required
+                id="id_login">
+        </p>
 
-        <div class="social-buttons">
-          <button type="button" class="btn btn-link btn-floating">
-            <i class="fab fa-facebook-f"></i>
-          </button>
+        <p>
+            <label for="id_password">Contraseña:</label>
+            <input type="password" name="password" placeholder="Contraseña" autocomplete="current-password" required
+                aria-describedby="id_password_helptext" id="id_password">
+            <span class="helptext" id="id_password_helptext"><a href="/accounts/password/reset/">¿Ha olvidado tu
+                    contraseña?</a></span>
+        </p>
 
-          <button type="button" class="btn btn-link btn-floating">
-            <i class="fab fa-tiktok"></i>
-          </button>
+        <p>
+            <label for="id_remember">Recordarme:</label>
+            <input type="checkbox" name="remember" id="id_remember">
+        </p>
 
-          <button type="button" class="btn btn-link btn-floating">
-            <i class="fab fa-instagram"></i>
-          </button>
-        </div>
-      </div>
-
-  </div>
-
-  </form>
-  </div>
-
+        <button type="submit">Iniciar sesión</button>
+    </form>
 </main>
-
-{% endblock %}
+{% endblock %}
