cruds destinatarios, pagos, pedidos  funcionando, actualizacion de main

--- a/templates/clientes/registrar.html
+++ b/templates/clientes/registrar.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <main role="main" class="container">
-  <div class="frm_nuevocliente">
+  <div class="frm_container">
     <h1>Nuevo Cliente</h1>
     <hr>
 
