--- a/static/css/main.css
+++ b/static/css/main.css
@@ -97,58 +97,93 @@ main ul li {
   gap: 20px; /* Espacio entre productos */
 }
 
+
+
 .producto-item {
   width: 400px;
-  padding: 10px; /* Ajusta el tamaño del cuadrado según sea necesario */
+  padding: 20px 25px;
   border: 1px solid #ddd;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  text-align: center;
-  background-color: #f9d8c7;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  background-color: #ffefdf;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Centra los elementos horizontalmente */
+  position: relative;
+}
+
+.producto-datos {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  box-sizing: border-box;
+  margin-bottom: 15px; /* Espacio entre el nombre y la imagen */
+}
+
+.producto-datos strong {
+  font-size: 20px;
+  
+  font-weight: 10;
+  color: #333; /* Color del texto del nombre */
+  margin: 0;
+}
+
+.producto-precio {
+  background-color: #ec9813; /* Color de fondo del círculo */
+  color: #fff; /* Color del texto dentro del círculo */
+  border-radius: 50%;
+  width: 60px; /* Tamaño del círculo */
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px; /* Tamaño del texto del precio */
+}
+
+.producto-imagen {
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 15px; /* Espacio entre la imagen y las opciones */
 }
 
 .producto-imagen img {
   width: 100%;
-  height: 300px; /* Ajusta la altura según sea necesario */
-  object-fit: cover; /* Asegura que la imagen cubra el área sin deformarse */
-}
-
-.producto-datos {
-  padding: 10px;
-}
-
-.producto-datos strong {
-  display: block;
-  margin-bottom: 10px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .producto-opciones {
   text-align: center;
-  margin-top: 20px;
 }
 
-.producto-opciones button {
-  background-color: #ec9813;
-  color: #fff;
-  border: none;
+.producto-opciones a {
+  background-color: #871f23; /* Color de fondo del botón */
+  color: #ffffff; /* Color del texto del botón */
+  text-decoration: none;
   border-radius: 5px;
-  padding: 10px 20px;
+  padding: 12px 24px; /* Ajusta el tamaño del botón */
   margin: 5px;
-  cursor: pointer;
+  display: inline-block;
   font-size: 16px;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
-.producto-opciones button:hover {
-  background-color: #871f23;
+.producto-opciones a:hover {
+  background-color: #d57a00; /* Color de fondo al pasar el ratón */
+  text-decoration: none;
+  font-style: bold;
   transform: scale(1.05);
 }
 
-.producto-opciones button:focus {
+.producto-opciones a:focus {
   outline: none;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.5);
 }
+
+
 
 /* Filtros */
 #filtro {
@@ -310,7 +345,7 @@ main ul li {
 }
 
 /* Estilo para el contenedor principal */
-.frm_nuevocliente {
+.frm_container {
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
@@ -320,7 +355,7 @@ main ul li {
 }
 
 /* Estilo para el título principal */
-.frm_nuevocliente h1 {
+.frm_container h1 {
   font-size: 28px;
   color: #ec9813;
   font-weight: bold;
@@ -329,7 +364,7 @@ main ul li {
 }
 
 /* Estilo para la línea horizontal */
-.frm_nuevocliente hr {
+.frm_container hr {
   border: 0;
   height: 1px;
   background-color: #ddd;
@@ -337,16 +372,16 @@ main ul li {
 }
 
 /* Estilo para el formulario */
-.frm_nuevocliente form {
+.frm_container form {
   display: flex;
   flex-direction: column;
 }
 
 /* Estilo para los inputs del formulario */
-.frm_nuevocliente input[type="text"],
-.frm_nuevocliente input[type="email"],
-.frm_nuevocliente input[type="password"],
-.frm_nuevocliente textarea {
+.frm_container input[type="text"],
+.frm_container input[type="email"],
+.frm_container input[type="password"],
+.frm_container textarea {
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -356,7 +391,7 @@ main ul li {
 }
 
 /* Estilo para el botón de submit */
-.frm_nuevocliente input[type="submit"] {
+.frm_container input[type="submit"] {
   margin-top: 25px;
   background-color: #ec9813;
   color: white;
@@ -369,16 +404,16 @@ main ul li {
 }
 
 /* Efecto hover para el botón */
-.frm_nuevocliente input[type="submit"]:hover {
+.frm_container input[type="submit"]:hover {
   background-color: #a9161b;
   transform: scale(1.05);
 }
 
 /* Efecto focus para los inputs */
-.frm_nuevocliente input[type="text"]:focus,
-.frm_nuevocliente input[type="email"]:focus,
-.frm_nuevocliente input[type="password"]:focus,
-.frm_nuevocliente textarea:focus {
+.frm_container input[type="text"]:focus,
+.frm_container input[type="email"]:focus,
+.frm_container input[type="password"]:focus,
+.frm_container textarea:focus {
   outline: none;
   box-shadow: 0 0 3px rgba(0, 0, 0, 0.3);
 }
