--- a/templates/pagos/registrar.html
+++ b/templates/pagos/registrar.html
@@ -1,19 +1,17 @@
-
 {% extends 'menu.html' %}
 
-{% block title %}Editar Producto{% endblock %}
+{% block title %}Nuevo Destinatario{% endblock %}
 
 {% block content %}
 <main role="main" class="container">
   <div class="frm_container">
-    <h1>Editar Producto</h1>
+    <h1>Nuevo Destinatario</h1>
     <hr>
 
-    <form method="post" action="{% url 'editar_producto' producto.id %}" enctype="multipart/form-data">
+    <form method="post" action="{% url 'nuevo_destinatario' %}">
       {% csrf_token %}
       {{ formulario }}
       <input type="submit" value="Guardar" class="btn btn-primary">
-      <a href="{% url 'productos' %}" class="btn btn-secondary mt-3">Volver a la lista</a>
     </form>
 
     {% if mensaje_error %}
@@ -23,6 +21,7 @@
     {% endif %}
 
     {% if form.errors %}
+    
     <ul>
         {% for field in form %}
             {% for error in field.errors %}
@@ -37,4 +36,3 @@
   </div>
 </main>
 {% endblock %}
-
