--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -1,47 +1,64 @@
 {% extends 'menu.html' %}
 
-{% block title %}Inicio de Sesión{% endblock %}
+{% block title %}Login{% endblock %}
 
 {% block content %}
 
-<main class="container mt-5">
-
-    <div>
-        <strong>Menú:</strong>
-        <ul>
-            <li><a href="/accounts/login/">Iniciar sesión</a></li>
-            <li><a href="/accounts/signup/">Registrarse</a></li>
-        </ul>
-    </div>
-
-    <h1>Iniciar sesión</h1>
-
-    <p>
-        Si aún no ha creado una cuenta, por favor <a href="/accounts/signup/">regístrese</a> primero.
-    </p>
-
+<main role="main" class="container mt-5">
+  <div class="login-container">
     <form method="post" action="{% url 'account_login' %}">
-        {% csrf_token %}
-        <p>
-            <label for="id_login">Usuario:</label>
-            <input type="text" name="login" placeholder="Usuario" autocomplete="username" maxlength="150" required
-                id="id_login">
-        </p>
+      {% csrf_token %}
+      <h1>Iniciar sesión</h1>
 
-        <p>
-            <label for="id_password">Contraseña:</label>
-            <input type="password" name="password" placeholder="Contraseña" autocomplete="current-password" required
-                aria-describedby="id_password_helptext" id="id_password">
-            <span class="helptext" id="id_password_helptext"><a href="/accounts/password/reset/">¿Ha olvidado tu
-                    contraseña?</a></span>
-        </p>
+      <!-- Email input -->
+      <div class="form-outline mb-4">
+        <label class="form-label" for="id_login">Usuario</label>
+        <input type="text" name="login" id="id_login" class="form-control" placeholder="Usuario" autocomplete="username" maxlength="150" required />
+      </div>
 
-        <p>
-            <label for="id_remember">Recordarme:</label>
-            <input type="checkbox" name="remember" id="id_remember">
-        </p>
+      <!-- Password input -->
+      <div class="form-outline mb-4">
+        <label class="form-label" for="id_password">Contraseña</label>
+        <input type="password" name="password" id="id_password" class="form-control" placeholder="Contraseña" autocomplete="current-password" required />
+        <span class="helptext"><a href="{% url 'account_reset_password' %}">¿Olvidaste tu contraseña?</a></span>
+      </div>
 
-        <button type="submit">Iniciar sesión</button>
+      <!-- 2 column grid layout for inline styling -->
+      <div class="row mb-4">
+        <div class="col d-flex justify-content-center">
+          <!-- Checkbox -->
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" name="remember" id="id_remember" />
+            <label class="form-check-label" for="id_remember"> Recordarme </label>
+          </div>
+        </div>
+
+        <div class="col">
+          <!-- Simple link -->
+          <a style="text-decoration: none;" href="{% url 'account_signup' %}">¿No tienes cuenta? Regístrate</a>
+        </div>
+      </div>
+
+      <!-- Submit button -->
+      <button type="submit" class="btn btn-primary btn-block mb-4">Iniciar Sesión</button>
+
+      <!-- Register buttons -->
+      <div class="redes_sociales text-center">
+        <p>Síguenos en:</p>
+        <div class="social-buttons">
+          <button type="button" class="btn btn-link btn-floating">
+            <i class="fab fa-facebook-f"></i>
+          </button>
+          <button type="button" class="btn btn-link btn-floating">
+            <i class="fab fa-tiktok"></i>
+          </button>
+          <button type="button" class="btn btn-link btn-floating">
+            <i class="fab fa-instagram"></i>
+          </button>
+        </div>
+      </div>
     </form>
+  </div>
 </main>
-{% endblock %}
+
+{% endblock %}
