--- a/templates/clientes/pedidos.html
+++ b/templates/clientes/pedidos.html
@@ -7,7 +7,10 @@
   <div class="info-cliente">
 
     <!-- Historial de pedidos  -->
-    <h2 class="mb-4">Historial de Pedidos</h2>
+    <div class="d-flex justify-content-between align-items-center mb-4">
+      <h2>Historial de Pedidos</h2>
+      <a href="{% url 'pedido_crear' %}" class="btn btn-primary">Nuevo Pedido</a>
+    </div>
     <table class="table">
       <thead>
         <tr>
