--- a/templates/items/info_productos.html
+++ b/templates/items/info_productos.html
@@ -80,7 +80,7 @@
                 <td>{{ item.precio }}</td>
                 <td>{{ item.tipo }}</td>
                 <td>
-                    <!-- <a href="{% url 'detalle_producto' producto.id %}" class="btn btn-info btn-sm">Editar</a> -->
+                    <a href="{% url 'detalle_item' item.id %}?next={{ request.path }}" class="btn btn-info btn-sm">Editar</a>
                     <form action="{% url 'eliminar_item' item.id item.producto_id %}" method="post" style="display:inline;"
                         class="delete-item">
                         {% csrf_token %}
