--- a/templates/clientes/pedidos.html
+++ b/templates/clientes/pedidos.html
@@ -3,33 +3,31 @@
 {% block title %}Pedidos{% endblock %}
 
 {% block content %}
-<main role="main" class="container mt-5">
-  <div class="info-cliente">
+<div class="info-cliente">
 
-    <!-- Historial de pedidos  -->
-    <h2 class="mb-4">Historial de Pedidos</h2>
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Fecha</th>
-          <th scope="col">Destinatario</th>
-          <th scope="col">Estado</th>
-          <th scope="col">Detalle </th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for pedido in pedidos %}
-        <tr>
-          <th scope="row"><a href="">{{ pedido.id }}</a></th>
-          <td>{{ pedido.fecha }}</td>
-          <td>{{ pedido.destinatario.nombre }}</td>
-          <td>{{ pedido.estado }}</td>
-          <td> Ver detalle </td> <!-- rediccionar a el detalle del pedido  -->
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-  </div>
-</main>
+  <!-- Historial de pedidos  -->
+  <h2 class="mb-4">Historial de Pedidos</h2>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">#</th>
+        <th scope="col">Fecha</th>
+        <th scope="col">Destinatario</th>
+        <th scope="col">Estado</th>
+        <th scope="col">Detalle </th>
+      </tr>
+    </thead>
+    <tbody>
+      {% for pedido in pedidos %}
+      <tr>
+        <th scope="row" data-label="#"> <a href="">{{ pedido.id }}</a></th>
+        <td data-label="Fecha:">{{ pedido.fecha }}</td>
+        <td data-label="Destinatario:">{{ pedido.destinatario.nombre }}</td>
+        <td data-label="Estado:">{{ pedido.estado }}</td>
+        <td data-label="Detalle:"> Ver detalle </td> <!-- rediccionar a el detalle del pedido -->
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+</div>
 {% endblock %}
