--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,15 +1,43 @@
-/* Estilos generales */
+/* Estilos de fondo del body */
 body {
   font-family: Arial, sans-serif;
-  margin: 20px;
-  padding: 0;
-  background-color: #f9f9f9;
+  color: #000000; /* Color del texto */
+  position: relative; /* Necesario para el pseudo-elemento */
 }
+
+/* Imagen de fondo */
+body::before {
+  content: "";
+  position: fixed; /* Fijo para que la imagen de fondo no se mueva al hacer scroll */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: url("../img/bg-main.jpg");
+  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
+  background-position: center; /* Centra la imagen en el fondo */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  z-index: -1; /* Coloca la imagen detrás del contenido */
+}
+
+/* Color sólido con transparencia en el fondo del contenido */
+body::after {
+  content: "";
+  position: fixed; /* Absoluto para cubrir todo el body */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; /* Cambia a 100% para cubrir todo el contenido */
+  background-color: rgba(255, 255, 255, 0.85); /* Color blanco con opacidad */
+  z-index: -1; 
+}
+
 
 table {
   background-color: #fff;
-  border-radius: 5px;
+  border-radius: 20px;
   border: 1px solid #ddd;
+  -webkit-overflow-scrolling: touch;
 }
 
 thead th {
@@ -29,20 +57,24 @@ tbody td {
   vertical-align: middle;
 }
 
+
 /* Barra lateral */
 .sidebar {
   position: fixed;
   top: 0;
   left: 0;
   width: 250px;
-  height: 100%;
+  height: 100vh;
   background-color: #871f23;
   padding: 20px;
   color: #f8f9fa;
   box-shadow: 2px 0 5px rgba(0, 0, 0, 0.2);
+  z-index: 1;
 }
 
 .sidebar h2 {
+  text-align: center;
+  font-size: 30px;
   margin-top: 0;
 }
 
@@ -66,8 +98,14 @@ tbody td {
 
 /* Contenido principal */
 main {
-  margin-left: 270px; /* Deja espacio para la barra lateral */
+  top: 0;
+  left: 135px;
+  height: 100vh;
   padding: 20px;
+  justify-content: center;
+  position: relative;
+  z-index: 1; /* Asegura que el contenido esté por encima del color y la imagen */
+  
 }
 
 main ul {
@@ -79,9 +117,16 @@ main ul li {
   margin-bottom: 10px;
 }
 
+
+
 /* Productos */
 .producto {
   padding: 20px;
+  text-align: center;
+}
+
+.producto strong {
+  color: #ec9813;
 }
 
 .producto-titulo {
@@ -99,10 +144,8 @@ main ul li {
   gap: 20px; /* Espacio entre productos */
 }
 
-
-
 .producto-item {
-  width: 400px;
+  width: 325px;
   padding: 20px 25px;
   border: 1px solid #ddd;
   border-radius: 10px;
@@ -125,7 +168,6 @@ main ul li {
 
 .producto-datos strong {
   font-size: 20px;
-  
   font-weight: 10;
   color: #333; /* Color del texto del nombre */
   margin: 0;
@@ -206,6 +248,10 @@ main ul li {
   transition: background-color 0.3s, color 0.3s;
 }
 
+.filtro-categoria {
+  background-color: #fff; /* Color de fondo predeterminado */
+}
+
 .filtro-categoria:hover {
   background-color: #ec9813;
   color: #333;
@@ -215,6 +261,19 @@ main ul li {
   background-color: #ec9813;
   color: #fff;
   border-color: none;
+}
+
+.activo {
+  background-color: #ec9813; 
+  color: #fff; 
+  font-weight: bold;
+  border-color: #ec9813; 
+}
+
+.activo:hover {
+  background-color: #fff; 
+  color: #333; 
+  font-weight:normal;
 }
 
 /* Información del producto */
