--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -4,61 +4,64 @@
 
 {% block content %}
 
-<main role="main" class="container mt-5">
-  <div class="login-container">
-    <form method="post" action="{% url 'account_login' %}">
-      {% csrf_token %}
-      <h1>Iniciar sesión</h1>
+<div class="login-container">
+  <form method="post" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    <h1>Iniciar sesión</h1>
 
-      <!-- Email input -->
-      <div class="form-outline mb-4">
-        <label class="form-label" for="id_login">Usuario</label>
-        <input type="text" name="login" id="id_login" class="form-control" placeholder="Usuario" autocomplete="username" maxlength="150" required />
-      </div>
+    <!-- Email input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="id_login">Usuario</label>
+      <input type="text" name="login" id="id_login" class="form-control" placeholder="Usuario" autocomplete="username"
+        maxlength="150" required />
+    </div>
 
-      <!-- Password input -->
-      <div class="form-outline mb-4">
-        <label class="form-label" for="id_password">Contraseña</label>
-        <input type="password" name="password" id="id_password" class="form-control" placeholder="Contraseña" autocomplete="current-password" required />
-        <span class="helptext"><a href="{% url 'account_reset_password' %}">¿Olvidaste tu contraseña?</a></span>
-      </div>
+    <!-- Password input -->
+    <div class="form-outline mb-4">
+      <label class="form-label" for="id_password">Contraseña</label>
+      <input type="password" name="password" id="id_password" class="form-control" placeholder="Contraseña"
+        autocomplete="current-password" required />
+      <span class="helptext"><a href="{% url 'account_reset_password' %}">¿Olvidaste tu contraseña?</a></span>
+    </div>
 
-      <!-- 2 column grid layout for inline styling -->
-      <div class="row mb-4">
-        <div class="col d-flex justify-content-center">
-          <!-- Checkbox -->
-          <div class="form-check">
-            <input class="form-check-input" type="checkbox" name="remember" id="id_remember" />
-            <label class="form-check-label" for="id_remember"> Recordarme </label>
-          </div>
-        </div>
-
-        <div class="col">
-          <!-- Simple link -->
-          <a style="text-decoration: none;" href="{% url 'account_signup' %}">¿No tienes cuenta? Regístrate</a>
+    <!-- 2 column grid layout for inline styling -->
+    <div class="row mb-4">
+      <div class="col d-flex justify-content-center">
+        <!-- Checkbox -->
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" name="remember" id="id_remember" />
+          <label class="form-check-label" for="id_remember"> Recordarme </label>
         </div>
       </div>
 
-      <!-- Submit button -->
-      <button type="submit" class="btn btn-primary btn-block mb-4">Iniciar Sesión</button>
-
-      <!-- Register buttons -->
-      <div class="redes_sociales text-center">
-        <p>Síguenos en:</p>
-        <div class="social-buttons">
-          <button type="button" class="btn btn-link btn-floating">
-            <i class="fab fa-facebook-f"></i>
-          </button>
-          <button type="button" class="btn btn-link btn-floating">
-            <i class="fab fa-tiktok"></i>
-          </button>
-          <button type="button" class="btn btn-link btn-floating">
-            <i class="fab fa-instagram"></i>
-          </button>
-        </div>
+      <div class="col">
+        <!-- Simple link -->
+        <a style="text-decoration: none;" href="{% url 'account_signup' %}">¿No tienes cuenta? Regístrate</a>
       </div>
-    </form>
-  </div>
-</main>
+    </div>
+
+    <!-- Submit button -->
+    <button type="submit" class="btn btn-primary btn-block mb-4">Iniciar Sesión</button>
+
+    <!-- Register buttons -->
+    <div class="redes_sociales text-center">
+      <p>Síguenos en:</p>
+      <div class="social-buttons">
+        <a href="https://www.facebook.com/detalles.carino.sd/" class="btn btn-link btn-floating" target="_blank"
+          rel="noopener noreferrer">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="https://www.tiktok.com/@carino.sd?_t=8pOFFconRIb&_r=1" class="btn btn-link btn-floating"
+          target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-tiktok"></i>
+        </a>
+        <a href="https://www.instagram.com/carino.sd?igsh=MXJsZWJpZjE0cjRocQ==" class="btn btn-link btn-floating"
+          target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-instagram"></i>
+        </a>
+      </div>
+    </div>
+  </form>
+</div>
 
 {% endblock %}
