--- a/templates/clientes/info_cliente.html
+++ b/templates/clientes/info_cliente.html
@@ -3,32 +3,34 @@
 {% block title %}Pedidos{% endblock %}
 
 {% block content %}
-<main role="main" class="container mt-5">
-  <div class="info-cliente">
+<div class="info-cliente">
 
-    <!-- Perfil  -->
-    <h1 class="mb-4">Perfil del Cliente: {{ cliente.nombre }}</h1>
-    <div class="card mb-4">
-      <div class="card-header">
-        Información del Cliente
-      </div>
-      <div class="card-body">
-        <p><strong>Cédula:</strong> {{ cliente.cedula }}</p>
-        <p><strong>Email:</strong> {{ cliente.email }}</p>
-        <p><strong>Teléfono:</strong> {{ cliente.telefono }}</p>
-        <p><strong>Dirección:</strong> {{ cliente.direccion }}</p>
-        <p><strong>Ciudad:</strong> {{ cliente.ciudad }}</p>
-      </div>
+  <!-- Perfil  -->
+  <h1 class="mb-4">Perfil de {{ cliente.nombre }}</h1>
+  <p style="font-style: italic ;font-size: 12px;margin-top: -25px;color: #871f23;"><strong>Usuario:</strong> {{ cliente.user }} </p>
+  <div class="card mb-4">
+    <div class="card-header">
+      Información del Cliente
     </div>
-
-    <a href="{% url 'detalle_cliente' cliente.id %}" class="btn btn-info btn-sm">
-      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-        <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-        <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5.1 0 0 0 1 2.5z"/>
-      </svg>
-      Actualizar Información
-    </a>
-
+    <div class="card-body">
+      <p><strong>Cédula:</strong> {{ cliente.cedula }}</p>
+      <p><strong>Email:</strong> {{ cliente.email }}</p>
+      <p><strong>Teléfono:</strong> {{ cliente.telefono }}</p>
+      <p><strong>Dirección:</strong> {{ cliente.direccion }}</p>
+      <p><strong>Ciudad:</strong> {{ cliente.ciudad }}</p>
+    </div>
   </div>
-</main>
+
+  <a href="{% url 'detalle_cliente' cliente.id %}" class="btn btn-info btn-sm">
+    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square"
+      viewBox="0 0 16 16">
+      <path
+        d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+      <path fill-rule="evenodd"
+        d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5.1 0 0 0 1 2.5z" />
+    </svg>
+    Actualizar Información
+  </a>
+
+</div>
 {% endblock %}
