--- a/templates/productos/listado.html
+++ b/templates/productos/listado.html
@@ -3,6 +3,7 @@
 {% block title %}Productos{% endblock %}
 
 {% block content %}
+<main role="main" class="container mt-5">
   <div class="info-cliente">
 
     <!-- Historial de pedidos  -->
@@ -57,6 +58,7 @@
       </tbody>
     </table>
   </div>
+</main>
 
 <script>
   document.addEventListener('DOMContentLoaded', function() {
