--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -4,6 +4,7 @@
 
 {% block content %}
 
+<main role="main" class="container mt-5">
   <div class="login-container">
     <form id="signup-form" method="post" action="{% url 'account_signup' %}">
       {% csrf_token %}
@@ -45,15 +46,15 @@
       <div class="redes_sociales text-center">
         <p>Síguenos en:</p>
         <div class="social-buttons">
-          <a href="https://www.facebook.com/detalles.carino.sd/" class="btn btn-link btn-floating" target="_blank" rel="noopener noreferrer">
+          <button type="button" class="btn btn-link btn-floating">
             <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://www.tiktok.com/@carino.sd?_t=8pOFFconRIb&_r=1" class="btn btn-link btn-floating" target="_blank" rel="noopener noreferrer">
+          </button>
+          <button type="button" class="btn btn-link btn-floating">
             <i class="fab fa-tiktok"></i>
-          </a>
-          <a href="https://www.instagram.com/carino.sd?igsh=MXJsZWJpZjE0cjRocQ==" class="btn btn-link btn-floating" target="_blank" rel="noopener noreferrer">
+          </button>
+          <button type="button" class="btn btn-link btn-floating">
             <i class="fab fa-instagram"></i>
-          </a>
+          </button>
         </div>
       </div>
     </form>
