--- a/templates/clientes/registrar.html
+++ b/templates/clientes/registrar.html
@@ -3,10 +3,7 @@
 {% block title %}Nuevo Cliente{% endblock %}
 
 {% block content %}
-<<<<<<< HEAD
-=======
 <main role="main" class="container">
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
   <div class="frm_container">
     <h1>Nuevo Cliente</h1>
     <hr>
@@ -23,4 +20,5 @@
       </div>
     {% endif %}
   </div>
+</main>
 {% endblock %}
