--- a/templates/menu.html
+++ b/templates/menu.html
@@ -4,40 +4,33 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
   <title>{% block title %}Detalles Cariño{% endblock %}</title>
+
   <link href="https://getbootstrap.com/docs/4.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-<<<<<<< HEAD
-=======
 
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
   {% load static %}
   <link rel="stylesheet" href="{% static 'sweetalert2/sweetalert2.min.css' %}">
   <script src="{% static 'sweetalert2/sweetalert2.min.js' %}"></script>
   <link href="{% static 'css/main.css' %}" rel="stylesheet">
-  <link href="{% static 'css/responsive.css' %}" rel="stylesheet">
+
 </head>
 
 
 <body>
-<<<<<<< HEAD
-  <div class="row">
-    <!-- Barra de Navegación Vertical -->
-    <nav class="sidebar col-3">
-      <!-- nombre de usuario/cliente logeado o mensaje de bienvenida -->
-      <h2>
-        {% if user.is_authenticated %}
-        {% if cliente %}
-        {{ cliente.nombre }}
-=======
   <!-- Barra de Navegación Vertical -->
   <div class="sidebar">
     <!-- nombre de usuario/cliente logeado o mensaje de bienvenida -->
     <h2>
-      {% if cliente %}
-      {{ cliente.nombre }}
+      {% if user.is_authenticated %}
+        {% if cliente %}
+        {{ cliente.nombre }}
+        {% else %}
+        No tienes un cliente asociado
+      {% endif %}
       {% else %}
-      {{ mensaje }}
+      Bienvenido a Detalles Cariño
       {% endif %}
     </h2>
 
@@ -45,51 +38,27 @@
     <p>Tu ID de usuario es {{ request.session.user_id }}</p>
     {% endif %}
 
+
     <ul class="nav flex-column">
-      
-      
+
       <li class="nav-item">
         <a class="nav-link" href="{% url 'main' %}">
           <i class="fas fa-house"></i> Inicio
         </a>
       </li>
 
-      <!-- Información del cliente al registrarse -->
+      {% if user.is_authenticated %}
+
+      {% if cliente.id %}
+      <a class="nav-link" href="{% url 'clientes' cliente.id %}">
+        <i class="fas fa-user"></i> Cuenta
+      </a>
+
       <li class="nav-item">
-        {% if user.is_authenticated %}
-        <a class="nav-link" href="{% url 'clientes' cliente.id %}">
-          <i class="fas fa-user"></i> Cuenta
+        <a class="nav-link" href="{% url 'pedidos2' cliente.id %}">
+          <i class="fas fa-list"></i> Pedidos
         </a>
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
-        {% else %}
-        No tienes un cliente asociado
-        {% endif %}
-        {% else %}
-        Bienvenido a Detalles Cariño
-        {% endif %}
-      </h2>
-
-<<<<<<< HEAD
-      <ul class="nav flex-column">
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'main' %}">
-            <i class="fas fa-house"></i> Inicio
-          </a>
-        </li>
-
-        {% if user.is_authenticated %}
-        {% if cliente.id %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'clientes' cliente.id %}">
-            <i class="fas fa-user"></i> Cuenta
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'pedidos2' cliente.id %}">
-            <i class="fas fa-list"></i> Pedidos
-          </a>
-        </li>
+      </li>
 
         {% if user.is_staff %}
         <h5>--- Administrar ---</h5>
@@ -99,17 +68,20 @@
           </a>
         </li>
 
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'destinatarios' %}">
             <i class="fas fa-users"></i> Destinatarios
           </a>
         </li>
 
+
         <li class="nav-item">
           <a class="nav-link" href="{% url 'pagos' %}">
             <i class="fas fa-dollar"></i> Pagos
           </a>
         </li>
+
 
         <li class="nav-item">
           <a class="nav-link" href="{% url 'productos' %}">
@@ -118,88 +90,34 @@
         </li>
         {% endif %}
 
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'account_logout' %}">
-            <i class="fas fa-sign-out-alt"></i> Cerrar sesión
-          </a>
-        </li>
-        {% endif %}
-        {% else %}
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'account_login' %}">
-            <i class="fas fa-user"></i> Iniciar sesión
-          </a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="{% url 'account_signup' %}">
-            <i class="fas fa-pencil"></i> Registrarse
-          </a>
-        </li>
-        {% endif %}
-      </ul>
-    </nav>
-
-    <main role="main" class="container col-9">
-      <!-- Contenido principal -->
-      {% block content %}
-      <!-- El contenido específico de cada plantilla -->
-      {% endblock %}
-    </main>
-=======
-      
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'pedidos2' cliente.id %}">
-          <i class="fas fa-list"></i> Pedidos
-        </a>
-      </li>
-
-      
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'pedidos' %}">
-          <i class="fas fa-list"></i> Pedidos - Empleado
-        </a>
-      </li>
-
-      
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'destinatarios' %}">
-          <i class="fas fa-users"></i> Destinatarios
-        </a>
-      </li>
-
-      
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'pagos' %}">
-          <i class="fas fa-dollar"></i> Pagos
-        </a>
-      </li>
-
-      
-      <li class="nav-item">
-        <a class="nav-link" href="{% url 'productos' %}">
-          <i class="fas fa-box"></i> Productos
-        </a>
-      </li>
-      
-      
       <li class="nav-item">
         <a class="nav-link" href="{% url 'account_logout' %}">
           <i class="fas fa-sign-out-alt"></i> Cerrar sesión
         </a>
       </li>
+      {% endif %}
+
+      {% else %}
+
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'account_login' %}">
+          <i class="fas fa-user"></i> Iniciar sesión
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="{% url 'account_signup' %}">
+          <i class="fas fa-pencil"></i> Registrarse
+        </a>
+      </li>
+
+      {% endif %}
+
     </ul>
 
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
   </div>
+</body>
 
-<<<<<<< HEAD
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-Gn5384xqQ1aoWXA+0584pW6y8wF5VQbQ2NTy6OeBzEYZ7mE8K2xSdjOdNG7a5C" crossorigin="anonymous"></script>
-=======
 
 
 <!-- Contenido principal -->
@@ -211,7 +129,6 @@
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-Gn5384xqQ1aoWXA+0584pW6y8wF5VQbQ2NTy6OeBzEYZ7mE8K2xSdjOdNG7a5C" crossorigin="anonymous"></script>
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
 </body>
 
 </html>
