--- a/templates/pedidos/listado.html
+++ b/templates/pedidos/listado.html
@@ -1,124 +1,15 @@
-<<<<<<< HEAD
 <!-- Bootstrap CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-=======
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
 {% extends 'menu.html' %}
 
 {% block title %}Pedidos{% endblock %}
 
 {% block content %}
-<<<<<<< HEAD
 
-<div class="info-cliente">
-
-  <!-- Historial de pedidos  -->
-  <h2 class="mb-4">Lista de Pedidos</h2>
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Fecha</th>
-        <th scope="col">Cliente</th>
-        <th scope="col">Estado</th>
-        <th scope="col">Pago</th>
-        <th scope="col">Destinatario </th>
-        <th scope="col">Acciones </th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for pedido in pedidos %}
-      <tr>
-        <th scope="row"><a href="">{{ pedido.id }}</a></th>
-        <td data-label="Fecha">{{ pedido.fecha }}</td>
-        <td data-label="Cliente">{{ pedido.cliente.nombre }}</td>
-        <td data-label="Estado">{{ pedido.estado }}</td>
-        <td data-label="Pago">{{ pedido.pago.estado }}</td>
-        <td data-label="Destinatario">{{ pedido.destinatario.nombre }}</td>
-        <td>
-
-          <a href="{% url 'detalle_pedido' pedido.id %}" class="btn btn-info btn-sm">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
-              class="bi bi-pencil-square" viewBox="0 0 16 16">
-              <path
-                d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
-              <path fill-rule="evenodd"
-                d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
-            </svg>
-            Editar</a>
-        </td> <!-- rediccionar a el detalle del pedido  -->
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div>
-
-<div class="modal fade" id="agregarProductoModal" tabindex="-1" aria-labelledby="agregarProductoModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog modal-lg">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="agregarProductoModalLabel">Agregar Producto</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-          <div class="col-12">
-            <ul id="lista-productos" class="row">
-              {% for producto in productos %}
-              <li class="producto-item col-12 col-md-6 mb-3 d-flex">
-                <div class="producto-imagen me-3">
-                  <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" class="img-fluid">
-                </div>
-                <div class="producto-datos">
-                  <strong>{{ producto.nombre }}</strong>
-                  <div class="producto-precio mb-2">{{ producto.precio_base }}</div>
-                </div>
-                <div class="producto-opciones">
-
-                </div>
-              </li>
-              {% endfor %}
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-        <button type="submit" form="formAgregarProducto" class="btn btn-primary">Guardar Producto</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-{% endblock %}
-
-<script>
-  var agregarProductoModal = document.getElementById('agregarProductoModal');
-  agregarProductoModal.addEventListener('show.bs.modal', function (event) {
-    // Botón que activó el modal
-    var button = event.relatedTarget;
-    // Extraer el ID del pedido del atributo data
-    var pedidoId = button.getAttribute('data-pedido-id');
-
-    // Asegurarte de que pedidoId es válido
-    if (pedidoId) {
-      // Actualizar todos los enlaces dentro del modal con el ID del pedido
-      var links = agregarProductoModal.querySelectorAll('.producto-opciones a');
-      links.forEach(function (link) {
-        var href = link.getAttribute('href');
-        href = href.replace('pedido_id_placeholder', pedidoId);
-        link.setAttribute('href', href);
-      });
-    }
-  });
-</script>
-=======
 <main role="main" class="container mt-5">
   <div class="info-cliente">
 
@@ -145,26 +36,21 @@
           <td>{{ pedido.estado }}</td>
           <td>{{ pedido.pago.estado }}</td>
           <td>{{ pedido.destinatario.nombre }}</td>
-<<<<<<< HEAD
-          <td> 
-          
-=======
           <td>
             </form>
             
             <div class="producto-opciones">
             </div>
 
->>>>>>> d593b3c170280e68ba4483d18a1ed09bc916c767
             <a href="{% url 'detalle_pedido' pedido.id %}" class="btn btn-info btn-sm">
-              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pencil-square" viewBox="0 0 16 16">
-                <path d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z"/>
-                <path fill-rule="evenodd" d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                class="bi bi-pencil-square" viewBox="0 0 16 16">
+                <path
+                  d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
+                <path fill-rule="evenodd"
+                  d="M1 13.5A1.5 1.5 0 0 0 2.5 15h11a1.5 1.5 0 0 0 1.5-1.5v-6a.5.5 0 0 0-1 0v6a.5.5 0 0 1-.5.5h-11a.5.5 0 0 1-.5-.5v-11a.5.5 0 0 1 .5-.5H9a.5.5 0 0 0 0-1H2.5A1.5 1.5 0 0 0 1 2.5z" />
               </svg>
               Editar</a>
-
-            </form>
-
           </td> <!-- rediccionar a el detalle del pedido  -->
         </tr>
         {% endfor %}
@@ -172,5 +58,64 @@
     </table>
   </div>
 </main>
+
+<div class="modal fade" id="agregarProductoModal" tabindex="-1" aria-labelledby="agregarProductoModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+          <div class="modal-header">
+              <h5 class="modal-title" id="agregarProductoModalLabel">Agregar Producto</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+              <div class="row">
+                  <div class="col-12">
+                      <ul id="lista-productos" class="row">
+                          {% for producto in productos %}
+                          <li class="producto-item col-12 col-md-6 mb-3 d-flex">
+                              <div class="producto-imagen me-3">
+                                  <img src="{{ producto.imagen.url }}" alt="{{ producto.nombre }}" class="img-fluid">
+                              </div>
+                              <div class="producto-datos">
+                                  <strong>{{ producto.nombre }}</strong>
+                                  <div class="producto-precio mb-2">{{ producto.precio_base }}</div>
+                              </div>
+                              <div class="producto-opciones">
+                                
+                              </div>
+                          </li>
+                          {% endfor %}
+                      </ul>
+                  </div>
+              </div>
+          </div>
+          <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+              <button type="submit" form="formAgregarProducto" class="btn btn-primary">Guardar Producto</button>
+          </div>
+      </div>
+  </div>
+</div>
+
+
 {% endblock %}
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
+
+<script>
+var agregarProductoModal = document.getElementById('agregarProductoModal');
+agregarProductoModal.addEventListener('show.bs.modal', function (event) {
+    // Botón que activó el modal
+    var button = event.relatedTarget;
+    // Extraer el ID del pedido del atributo data
+    var pedidoId = button.getAttribute('data-pedido-id');
+    
+    // Asegurarte de que pedidoId es válido
+    if (pedidoId) {
+        // Actualizar todos los enlaces dentro del modal con el ID del pedido
+        var links = agregarProductoModal.querySelectorAll('.producto-opciones a');
+        links.forEach(function(link) {
+            var href = link.getAttribute('href');
+            href = href.replace('pedido_id_placeholder', pedidoId); 
+            link.setAttribute('href', href);
+        });
+    }
+});
+</script>
