--- a/templates/pedidos/seleccion-productos.html
+++ b/templates/pedidos/seleccion-productos.html
@@ -3,6 +3,9 @@
 {% block title %}Detalles Cariño: {{producto.nombre}} {% endblock %}
 
 {% block content %}
+
+<main class="mr-4">
+
     <!-- Info productos  -->
     <div class="info-producto">
         <h1>{{ producto.nombre }}</h1> {{request.COOKIES.pedido_id}}
@@ -216,5 +219,7 @@
             updateTotal();
         });
     </script>
+
+</main>
 
 {% endblock %}
