--- a/templates/productos/editar.html
+++ b/templates/productos/editar.html
@@ -4,10 +4,7 @@
 {% block title %}Editar Producto{% endblock %}
 
 {% block content %}
-<<<<<<< HEAD
-=======
 <main role="main" class="container">
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
   <div class="frm_container">
     <h1>Editar Producto</h1>
     <hr>
@@ -38,5 +35,6 @@
     </ul>
     {% endif %}
   </div>
+</main>
 {% endblock %}
 
