--- a/templates/productos/registrar.html
+++ b/templates/productos/registrar.html
@@ -3,10 +3,7 @@
 {% block title %}Nuevo Producto{% endblock %}
 
 {% block content %}
-<<<<<<< HEAD
-=======
 <main role="main" class="container">
->>>>>>> 8c9ea26bb767f236a6778a3174630cfa22d79cc4
   <div class="frm_container">
     <h1>Nuevo Producto</h1>
     <hr>
@@ -36,4 +33,5 @@
     </ul>
     {% endif %}
   </div>
+</main>
 {% endblock %}
